--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 chrono = "0.4.39"
 clap = { version = "4.5.28", features = ["derive"] }
 color-print = "0.3.7"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sysinfo = "0.33.1"
